# Physics-Engine-Verlet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tmp.c  winCompile.bat
src/: circle_verlet.c  circle_verlet.h  color.c  color.h  graphics.c  graphics.h  grid.c  grid.h  misc.h  simulation.c  simulation.h  verlet.c
src/graphic/: config.h  error_handler.c  error_handler.h  graphics.c  graphics.h  verlet.c
src/simulation/: circle_verlet.c  circle_verlet.h  color.c  error_handler.c  error_handler.h  grid.c  grid.h  misc.h  save.c  sim.h  simd.c  simd.h  simulation.c  spatial_hashing.c  spatial_hashing.h  sticks.c  sticks.h  verlet_interface.h
test/: main.c  sim_test.c  test.c  test_save.data
